# Multininjaespacia

./: .gitignore  ARQUITECTURA_AVANZADA_LECCIONES.md  ARQUITECTURA_SOFTWARE.md  AUDIO_PLACEHOLDERS.md  AUTOMATED_SETUP_COMPLETE.md  BUGFIX_SESION.md  CMakeLists.txt  COMO_USAR_MEJORAS.md  ERRORES_Y_SOLUCIONES.md  FILES_CREATED.md  FIX_CULLING_BOTTOM.md  FIX_SLOTS_VACIOS.md  GETTING-STARTED.md  GODOT-ARCHITECTURE.md  GODOT-PROJECT-STRUCTURE.md  GODOT-ROADMAP.md  GODOT-WEB-STRUCTURE.md  GODOT_IMPORT_VISUAL_GUIDE.txt  GODOT_SETUP_INSTRUCTIONS.md  GUIA_CONTROLES_Y_SISTEMAS.md  HABILIDADES_TECNICAS.md  IMPLEMENTACION_COMPLETA.md  INDICE_DOCUMENTACION.md  INPUT_MAP_CONFIG.md  INSTRUCCIONES_FINALES.md  LLUVIA_IDEAS_ARMAS_INDUSTRIA.md  LLUVIA_IDEAS_ARTEFACTOS.md  MEJORAS_SHADERS.md  NUEVAS_FUNCIONALIDADES.md  NUEVAS_MEJORAS_GRAFICAS.md  PROJECT_SUMMARY.md  PRUEBAS_REFACTORIZACION.md  QUICK_START.md  README.md  READY_TO_PLAY.md  RESUMEN_IMPLEMENTACION.md  RESUMEN_PRUEBAS_UNITARIAS.md  RESUMEN_REFACTORIZACION.md  RESUMEN_SESION.txt  RESUMEN_SESION_ARMAS_MUEBLES.txt  (+18 more)
.godot/: global_script_class_cache.cfg  scene_groups_cache.cfg
.godot/editor/: GameHUD.tscn-folding-c8efd9efb246c5406234fc49ce0a502f.cfg  GameWorld.tscn-folding-8de3b07b299766595da4083fee5d640a.cfg  MainMenu.tscn-folding-4965b276fb8afe810f67c797e8d6e683.cfg  NPC.tscn-folding-09f7c9c1d1da8f021042785d1636f592.cfg  PauseMenu.tscn-folding-f3a0254cbdab81d1efc5e42f39e19dcf.cfg  Player.tscn-folding-a4e9bb150591131ae307f440fab940ce.cfg  editor_layout.cfg  editor_script_doc_cache.res  filesystem_cache10  filesystem_update4  project_metadata.cfg  script_editor_cache.cfg
.godot/imported/: block_atlas.png-8f7189c0fbbd9cf0dafa4a794a59cc69.ctex  block_atlas.png-8f7189c0fbbd9cf0dafa4a794a59cc69.md5
.spec/: project.md
assets/textures/: block_atlas.png.import
autoloads/: AchievementSystem.gd  AchievementSystem.gd.uid  AudioManager.gd  AudioManager.gd.uid  GameManager.gd  GameManager.gd.uid  PlayerData.gd  PlayerData.gd.uid  QuestSystem.gd  QuestSystem.gd.uid  SaveSystem.gd  SaveSystem.gd.uid  VirtueSystem.gd  VirtueSystem.gd.uid
docs/: ARQUITECTURA_REFACTORIZADA.md  IDE-SETUP-CLION.md
scenes/entities/: NPC.tscn
scenes/game/: GameWorld.tscn
scenes/main/: Main.tscn
scenes/menus/: MainMenu.tscn
scenes/npc/: NPC.tscn
scenes/player/: Player.tscn
scenes/ui/: GameHUD.tscn  PauseMenu.tscn
scenes/world/: Chunk.tscn
scripts/audio/: ProceduralSounds.gd  ProceduralSounds.gd.uid
scripts/core/: Constants.gd  Constants.gd.uid  Enums.gd  Enums.gd.uid  Utils.gd  Utils.gd.uid
scripts/data/: QuestData.gd  QuestData.gd.uid
scripts/debug/: ShaderDebugControls.gd  ShaderDebugControls.gd.uid
scripts/entities/: Animal.gd  Animal.gd.uid  Campfire.gd  Campfire.gd.uid  FurnitureEntity.gd  FurnitureEntity.gd.uid  NPC.gd  NPC.gd.uid  Projectile.gd  Projectile.gd.uid  WeaponEntity.gd  WeaponEntity.gd.uid
scripts/game/: GameWorld.gd  GameWorld.gd.uid
scripts/items/: CraftingSystem.gd  CraftingSystem.gd.uid  FurnitureData.gd  FurnitureData.gd.uid  MagicTool.gd  MagicTool.gd.uid  ToolData.gd  ToolData.gd.uid  WeaponData.gd  WeaponData.gd.uid
scripts/main/: Main.gd  Main.gd.uid
scripts/npc/: NPC.gd  NPC.gd.uid  NPCData.gd  NPCData.gd.uid  NPCManager.gd  NPCManager.gd.uid
scripts/player/: CameraController.gd  CameraController.gd.uid  Player.gd  Player.gd.uid  PlayerInteraction.gd  PlayerInteraction.gd.uid  PlayerMovement.gd  PlayerMovement.gd.uid
scripts/rendering/: AnimalModelGenerator.gd  AnimalModelGenerator.gd.uid  FurnitureModelGenerator.gd  FurnitureModelGenerator.gd.uid  HumanoidModelGenerator.gd  HumanoidModelGenerator.gd.uid  MaterialLibrary.gd  MaterialLibrary.gd.uid  PresetTransitionManager.gd  PresetTransitionManager.gd.uid  ShaderPresets.gd  ShaderPresets.gd.uid  TextureAtlasManager.gd  TextureAtlasManager.gd.uid  ToolModelGenerator.gd  ToolModelGenerator.gd.uid  WeaponModelGenerator.gd  WeaponModelGenerator.gd.uid
scripts/systems/: AccessoryVisualizer.gd  AccessoryVisualizer.gd.uid  AchievementSystem.gd  AchievementSystem.gd.uid  CombatSystem.gd  CombatSystem.gd.uid  CraftingSystem.gd  CraftingSystem.gd.uid  FurniturePlacement.gd  FurniturePlacement.gd.uid  FurnitureSystem.gd  FurnitureSystem.gd.uid  QuestSystem.gd  QuestSystem.gd.uid  SurvivalSystem.gd  SurvivalSystem.gd.uid  ToolSystem.gd  ToolSystem.gd.uid  WeaponSystem.gd  WeaponSystem.gd.uid
scripts/tools/: generate_atlas.py  generate_placeholder_atlas.gd  generate_placeholder_atlas.gd.uid
scripts/ui/: AchievementNotification.gd  AchievementNotification.gd.uid  AchievementPanel.gd  AchievementPanel.gd.uid  AchievementUI.gd  AchievementUI.gd.uid  CraftingUI.gd  CraftingUI.gd.uid  DialogueUI.gd  DialogueUI.gd.uid  FurnitureUI.gd  FurnitureUI.gd.uid  GameHUD.gd  GameHUD.gd.uid  MainMenu.gd  MainMenu.gd.uid  PauseMenu.gd  PauseMenu.gd.uid  ToolHUD.gd  ToolHUD.gd.uid
scripts/vfx/: ParticleEffects.gd  ParticleEffects.gd.uid
scripts/world/: BiomeManager.gd  BiomeManager.gd.uid  BiomeSystem.gd  BiomeSystem.gd.old  BiomeSystem.gd.uid  BlockData.gd  BlockData.gd.uid  Chunk.gd  Chunk.gd.uid  ChunkManager.gd  ChunkManager.gd.uid  DayNightCycle.gd  DayNightCycle.gd.uid  StructureGenerator.gd  StructureGenerator.gd.uid  TerrainGenerator.gd  TerrainGenerator.gd.uid  WeatherSystem.gd  WeatherSystem.gd.uid
scripts/world/generation/: BiomeGenerator.gd  BiomeGenerator.gd.uid
shaders/: block_voxel.gdshader  block_voxel.gdshader.uid
src/application/services/: GameStateManager.cpp
src/presentation/: GameLoop.cpp  GameLoop.hpp  GameWindow.cpp  GameWindow.hpp  main.cpp
tests/: README_TESTS.md  TestBiomeSystem.tscn  quick_debug_test.gd  quick_debug_test.gd.uid  run_all_tests.gd  run_all_tests.gd.uid  test_biome_system.gd  test_biome_system.gd.uid  test_combat_system.gd  test_combat_system.gd.uid  test_furniture_system.gd  test_furniture_system.gd.uid  test_weapon_system.gd  test_weapon_system.gd.uid
tests/integration/: test_game_loop.cpp  test_networking.cpp  test_rendering.cpp
tests/unit/: test_components.cpp  test_ecs.cpp  test_math.cpp  test_systems.cpp
(+32 files in other folders)
